<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigPanel">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cognito_pool_id"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCognitoPoolId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/xxxxxxxxxx_iot_region_amazonaws_com"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_testing_endpoint"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCustomerSpecificEnpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/region_xxxxxxxxx_xxxx_xxxx_xxxx_xxxxxxxxxxxx"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="italic"
            android:inputType="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/region"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/region"
            android:inputType=""
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/save"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>